--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GeoGIS Solutions - Inteligencia Geoespacial para Tu Industria</title>
+    <title>GeoGIS Solutions</title>
     <meta name="description" content="Líderes en soluciones GIS. Transformamos datos en decisiones estratégicas con ArcGIS, análisis predictivo y tecnología de vanguardia para gobiernos y empresas.">
     <meta name="keywords" content="GIS, ArcGIS, mapas interactivos, análisis geoespacial, dashboards, WebGIS, teledetección, consultoría SIG">
     <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🌍</text></svg>">
