--- a/index.html
+++ b/index.html
@@ -1009,6 +1009,16 @@
         .mt-2 { margin-top: 0.5rem; }
         .mt-3 { margin-top: 1rem; }
         .mt-4 { margin-top: 1.5rem; }
+
+        /* Particles.js (no intrusivo) */
+        #particles-js {
+            position: absolute;
+            inset: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 1; /* debajo del contenido (.hero-container z-index:2) */
+            pointer-events: none; /* no bloquear clics */
+        }
     </style>
 </head>
 <body>
@@ -1038,6 +1048,9 @@
     
     <!-- Hero Section -->
     <section class="hero" id="inicio">
+        <!-- Contenedor de partículas (añadido) -->
+        <div id="particles-js" aria-hidden="true"></div>
+
         <div class="hero-container">
             <div class="hero-content">
                 <h1>Inteligencia geoespacial para decidir mejor</h1>
@@ -1529,6 +1542,131 @@
             </div>
         </div>
     </div>
+
+    <!-- Particles.js library (añadido) -->
+    <!-- Scripts de las bibliotecas -->
+<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/anime.js/3.2.1/anime.min.js"></script>
+
+<!-- Lógica -->
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    const prefersReduced = window.matchMedia('(prefers-reduced-motion: reduce)').matches;
+    const isMobile = window.innerWidth < 768;
+
+    // 1) Particles.js: constelación blanca minimal
+    particlesJS('particles-js', {
+      particles: {
+        number: { value: isMobile ? 50 : 90, density: { enable: true, value_area: 900 } },
+        color: { value: "#ffffff" },
+        shape: { type: ["circle","polygon"], polygon: { nb_sides: 6 } },
+        opacity: { value: 0.22, random: true, anim: { enable: !prefersReduced, speed: 0.6, opacity_min: 0.05, sync: false } },
+        size: { value: 2.2, random: true, anim: { enable: !prefersReduced, speed: 1, size_min: 0.8, sync: false } },
+        line_linked: { enable: true, distance: isMobile ? 110 : 140, color: "#ffffff", opacity: 0.25, width: 0.8 },
+        move: { enable: !prefersReduced, speed: isMobile ? 0.6 : 0.9, direction: "none", random: false, straight: false, out_mode: "out", bounce: false }
+      },
+      interactivity: {
+        detect_on: "canvas",
+        events: {
+          onhover: { enable: !prefersReduced, mode: ["grab","repulse"] },
+          onclick: { enable: !prefersReduced, mode: "push" },
+          resize: true
+        },
+        modes: {
+          grab: { distance: 160, line_linked: { opacity: 0.45 } },
+          repulse: { distance: 120, duration: 0.4 },
+          push: { particles_nb: 2 }
+        }
+      },
+      retina_detect: true
+    });
+
+    // Glow sutil al canvas + shimmer con anime.js
+    const waitCanvas = setInterval(() => {
+      const c = document.querySelector('#particles-js canvas');
+      if (c) {
+        c.style.filter = 'drop-shadow(0 0 2px #fff) drop-shadow(0 0 8px rgba(255,255,255,.35))';
+        c.style.opacity = '0.95';
+        clearInterval(waitCanvas);
+
+        if (!prefersReduced && window.anime) {
+          anime({
+            targets: c,
+            opacity: [0.85, 1],
+            easing: 'easeInOutSine',
+            direction: 'alternate',
+            duration: 4000,
+            loop: true
+          });
+        }
+      }
+    }, 50);
+
+    // 2) Capa de “estrellas” en 3D (THREE.js) blanca y muy ligera
+    if (!prefersReduced && window.THREE) {
+      const container = document.getElementById('particles-js');
+      const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
+      renderer.setPixelRatio(Math.min(window.devicePixelRatio, 2));
+      renderer.setSize(container.clientWidth, container.clientHeight);
+      Object.assign(renderer.domElement.style, {
+        position: 'absolute',
+        inset: '0',
+        pointerEvents: 'none'
+      });
+      container.appendChild(renderer.domElement);
+
+      const scene = new THREE.Scene();
+      const camera = new THREE.PerspectiveCamera(60, container.clientWidth / container.clientHeight, 1, 1000);
+      camera.position.z = 200;
+
+      const geometry = new THREE.BufferGeometry();
+      const starCount = isMobile ? 140 : 280;
+      const positions = new Float32Array(starCount * 3);
+      for (let i = 0; i < starCount; i++) {
+        positions[i * 3 + 0] = (Math.random() - 0.5) * 600;
+        positions[i * 3 + 1] = (Math.random() - 0.5) * 400;
+        positions[i * 3 + 2] = (Math.random() - 0.5) * 300;
+      }
+      geometry.setAttribute('position', new THREE.BufferAttribute(positions, 3));
+
+      const material = new THREE.PointsMaterial({
+        color: 0xffffff,
+        size: 1.2,
+        sizeAttenuation: true,
+        transparent: true,
+        opacity: 0.6
+      });
+      const stars = new THREE.Points(geometry, material);
+      scene.add(stars);
+
+      let mouseX = 0, mouseY = 0;
+      if (!isMobile) {
+        document.addEventListener('mousemove', (e) => {
+          mouseX = (e.clientX / window.innerWidth - 0.5) * 2;
+          mouseY = (e.clientY / window.innerHeight - 0.5) * 2;
+        });
+      }
+
+      function tick() {
+        stars.rotation.y += 0.0007;
+        stars.rotation.x += 0.0003;
+        camera.position.x += (mouseX * 10 - camera.position.x) * 0.02;
+        camera.position.y += (-mouseY * 10 - camera.position.y) * 0.02;
+        renderer.render(scene, camera);
+        requestAnimationFrame(tick);
+      }
+      tick();
+
+      window.addEventListener('resize', () => {
+        renderer.setSize(container.clientWidth, container.clientHeight);
+        camera.aspect = container.clientWidth / container.clientHeight;
+        camera.updateProjectionMatrix();
+      });
+    }
+  });
+</script>
+
     
     <script>
         // WhatsApp Widget Functions
