--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GeoGIS Solutions - Especialistas en Inteligencia Geoespacial</title>
+    <title>GeoGIS Solutions</title>
     <meta name="description" content="Especialistas en soluciones GIS. Convertimos datos territoriales en mapas, dashboards y aplicaciones que apoyan decisiones de gobierno y empresa.">
     <meta name="keywords" content="GIS, ArcGIS, mapas interactivos, análisis geoespacial, dashboards, WebGIS, estudios mercado territorial, consultoría SIG">
     <link rel="icon" type="image/png" href="public/favicon.png">
