--- a/index.html
+++ b/index.html
@@ -402,48 +402,60 @@
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer>
+        <!-- Footer -->
+    <footer style="background:#f1f5f9; color:#1e293b; padding:4rem 0 2rem;">
         <div class="container">
-            <div class="footer-content">
-                <div class="footer-section">
-                    <h4><img src="public/logo.png" alt="GeoGIS Solutions" style="width:24px;height:24px;vertical-align:middle;margin-right:.5rem;"> GeoGIS Solutions</h4>
-                    <p>Especialistas en soluciones geoespaciales para decisiones estratégicas. Convertimos datos territoriales en herramientas útiles que impulsan el crecimiento y la innovación.</p>
-                    <div class="social-links">
-                        <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                        <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+            <div class="footer-content" style="display:flex; flex-wrap:wrap; justify-content:space-between; gap:3rem; margin-bottom:3rem; text-align:left;">
+                
+                <div class="footer-section" style="flex:1; min-width:220px;">
+                    <h4 style="font-size:1.2rem; font-weight:700; margin-bottom:1.5rem; color:#334155;">
+                    GeoGIS Solutions
+                    </h4>
+                    <p style="color:#475569;">Especialistas en soluciones geoespaciales para decisiones estratégicas. Convertimos datos territoriales en herramientas útiles que impulsan el crecimiento y la innovación.</p>
+                    <div class="social-links" style="display:flex; gap:1rem; margin-top:1rem;">
+                        <a href="#" aria-label="LinkedIn" style="width:40px;height:40px;background:#e2e8f0;border-radius:50%;display:flex;align-items:center;justify-content:center;color:#334155;transition:all .3s ease;"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#" aria-label="Twitter" style="width:40px;height:40px;background:#e2e8f0;border-radius:50%;display:flex;align-items:center;justify-content:center;color:#334155;transition:all .3s ease;"><i class="fab fa-twitter"></i></a>
+                        <a href="#" aria-label="Instagram" style="width:40px;height:40px;background:#e2e8f0;border-radius:50%;display:flex;align-items:center;justify-content:center;color:#334155;transition:all .3s ease;"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
-                <div class="footer-section">
-                    <h4>Soluciones Principales</h4>
-                    <p><a href="#productos">Mapas e Informes</a></p>
-                    <p><a href="#productos">Dashboards Interactivos</a></p>
-                    <p><a href="#productos">WebGIS</a></p>
-                    <p><a href="#productos">Aplicaciones Móviles</a></p>
-                    <p><a href="#productos">Infraestructura GIS</a></p>
+
+                <div class="footer-section" style="flex:1; min-width:180px;">
+                    <h4 style="font-size:1.1rem; font-weight:700; margin-bottom:1.2rem; color:#334155;">Soluciones Principales</h4>
+                    <p><a href="#productos" style="color:#475569; text-decoration:none;">Mapas e Informes</a></p>
+                    <p><a href="#productos" style="color:#475569; text-decoration:none;">Dashboards Interactivos</a></p>
+                    <p><a href="#productos" style="color:#475569; text-decoration:none;">WebGIS</a></p>
+                    <p><a href="#productos" style="color:#475569; text-decoration:none;">Aplicaciones Móviles</a></p>
+                    <p><a href="#productos" style="color:#475569; text-decoration:none;">Infraestructura GIS</a></p>
                 </div>
-                <div class="footer-section">
-                    <h4>Sectores Especializados</h4>
-                    <p><a href="#industrias">Gobierno y Sector Público</a></p>
-                    <p><a href="#industrias">Planeación Urbana</a></p>
-                    <p><a href="#industrias">Procesos Electorales</a></p>
-                    <p><a href="#industrias">Transporte y Logística</a></p>
-                    <p><a href="#industrias">Estudios de Mercado</a></p>
+
+                <div class="footer-section" style="flex:1; min-width:180px;">
+                    <h4 style="font-size:1.1rem; font-weight:700; margin-bottom:1.2rem; color:#334155;">Sectores Especializados</h4>
+                    <p><a href="#industrias" style="color:#475569; text-decoration:none;">Gobierno y Sector Público</a></p>
+                    <p><a href="#industrias" style="color:#475569; text-decoration:none;">Planeación Urbana</a></p>
+                    <p><a href="#industrias" style="color:#475569; text-decoration:none;">Procesos Electorales</a></p>
+                    <p><a href="#industrias" style="color:#475569; text-decoration:none;">Transporte y Logística</a></p>
+                    <p><a href="#industrias" style="color:#475569; text-decoration:none;">Estudios de Mercado</a></p>
                 </div>
-                <div class="footer-section">
-                    <h4>Contacto Directo</h4>
-                    <p><i class="fas fa-envelope"></i> geogissolutionsmx@gmail.com</p>
-                    <p><i class="fas fa-phone"></i> +52 33 3402 8621</p>
-                    <p><i class="fas fa-map-marker-alt"></i> Guadalajara, Jalisco, México</p>
-                    <p><i class="fas fa-clock"></i> Lun-Vie 9:00 AM - 6:00 PM CST</p>
+
+                <div class="footer-section" style="flex:1; min-width:220px;">
+                    <h4 style="font-size:1.1rem; font-weight:700; margin-bottom:1.2rem; color:#334155;">Contacto Directo</h4>
+                    <p style="color:#475569;"><i class="fas fa-envelope"></i> geogissolutionsmx@gmail.com</p>
+                    <p style="color:#475569;"><i class="fas fa-phone"></i> +52 33 3402 8621</p>
+                    <p style="color:#475569;"><i class="fas fa-map-marker-alt"></i> Guadalajara, Jalisco, México</p>
+                    <p style="color:#475569;"><i class="fas fa-clock"></i> Lun-Vie 9:00 AM - 6:00 PM CST</p>
                 </div>
+
             </div>
-            <div class="footer-bottom">
-                <p>&copy; 2025 GeoGIS Solutions. Todos los derechos reservados. | <a href="#">Política de Privacidad</a> | <a href="#">Términos de Servicio</a> | <a href="#">Aviso Legal</a></p>
+            <div class="footer-bottom" style="border-top:1px solid #cbd5e1; padding-top:1.5rem; text-align:center; color:#64748b;">
+                <p>&copy; 2025 GeoGIS Solutions. Todos los derechos reservados. | 
+                   <a href="#" style="color:#475569; text-decoration:none;">Política de Privacidad</a> | 
+                   <a href="#" style="color:#475569; text-decoration:none;">Términos de Servicio</a> | 
+                   <a href="#" style="color:#475569; text-decoration:none;">Aviso Legal</a>
+                </p>
             </div>
         </div>
     </footer>
+
 
     <!-- WhatsApp Widget -->
     <div class="whatsapp-widget" id="whatsappWidget">
